add jwt-go
